# test--robotic-metamaterials

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
arduino/: README.md  array.py  multipath.csv  test.ino
dependencies/Ipopt/include/coin-or/: IpoptConfig.h
dependencies/Ipopt/libWIN/: README.txt
dependencies/Ipopt/libWIN/lib/: ipopt.dll.lib  ipoptamplinterface.dll.lib  sipopt.dll.lib
example-data/inputs/: cells--different-interface.txt  cells.txt  cells_2x2.txt  cells_2x2_separate.txt  cells_3x3.txt  cells_3x3_quad_star.txt  cells_3x3_quadrifolium.txt  cells_4x4.txt  cells_5x5_loops.txt  cells_6x6_double_star.txt  cells_6x6_large_star.txt  cells_6x6_spike.txt  cells_6x6_star.txt  cells_6x6_star_spike.txt  cells_7x7_big_line.txt  cells_7x7_squiggle.txt  cells__2018_9_20_17.27.56.txt  cells_double_path.txt  groundtruth1-cells__2018_9_19_9.52.24.txt  groundtruth2-cells__2018_9_19_10.4.35.txt  groundtruth3-cells__2018_9_19_10.17.23.txt
example-data/inputs/overview/: cells_overview_2x2_line.txt  cells_overview_2x2_loops.txt  cells_overview_2x2_spike.txt  cells_overview_2x2_squiggle.txt  cells_overview_3x3_line.txt  cells_overview_3x3_loops.txt  cells_overview_3x3_spike.txt  cells_overview_3x3_squiggle.txt  cells_overview_4x4_large_squiggle.txt  cells_overview_4x4_line.txt  cells_overview_4x4_loops.txt  cells_overview_4x4_spike.txt  cells_overview_4x4_squiggle.txt  cells_overview_5x5_large_squiggle.txt  cells_overview_5x5_line.txt  cells_overview_5x5_loops.txt  cells_overview_5x5_spike.txt  cells_overview_5x5_squiggle.txt  cells_overview_6x6_large_squiggle.txt  cells_overview_6x6_line.txt  cells_overview_6x6_loops.txt  cells_overview_6x6_spike.txt  cells_overview_6x6_squiggle.txt  cells_overview_7x7_large_squiggle.txt  cells_overview_7x7_line.txt  cells_overview_7x7_loops.txt  cells_overview_7x7_spike.txt  cells_overview_7x7_squiggle.txt
example-data/results/overview/7x7_large_squiggle/: objectives.csv  output_model
example-data/results/overview/7x7_large_squiggle/angles/: a0  a1  a10  a100  a101  a102  a103  a104  a105  a106  a107  a108  a109  a11  a110  a111  a112  a113  a114  a115  a116  a117  a118  a119  a12  a120  a121  a122  a123  a124  a125  a126  a127  a128  a129  a13  a130  a131  a132  a133  (+143 more)
example-data/results/overview/7x7_large_squiggle/points/: p0  p1  p10  p100  p101  p102  p103  p104  p105  p106  p107  p108  p109  p11  p110  p111  p112  p113  p114  p115  p116  p117  p118  p119  p12  p120  p121  p122  p123  p124  p125  p126  p127  p128  p129  p13  p130  p131  p132  p133  (+142 more)
src/: Animation.cpp  Animation.hpp  Communicator.h  GridModel.cpp  GridModel.h  MetaGrid.cpp  MetaGrid.hpp  MyNLP.cpp  MyNLP.hpp  SimAnnMan.cpp  SimAnnMan.hpp  SimuAn.cpp  SimuAn.hpp  Timer.cpp  Timer.hpp  main.cpp
